Fri Oct 24 19:18:37 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.c: Include <stdlib.h>
	* capplet-util.h: Delete COPY_FROM_LEGACY macro

Fri Oct 24 19:04:38 2008  Søren Sandmann  <sandmann@redhat.com>

	* gconf-property-editor.c: Delete unused function
	gconf_property_editor_new_filename() 

Fri Oct 24 18:38:47 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.c (capplet_init): Only call
	set_translation_domain() if the context is non-NULL

Fri Oct 24 18:29:14 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.c: Call g_option_context_set_translation_domain on
	the context.

Fri Oct 24 18:22:06 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-util.[ch]: Add new capplet_init() function

Fri Oct 24 17:21:56 2008  Søren Sandmann  <sandmann@redhat.com>

	* capplet-stock-icons.c (capplet_register_stock_icons): Get rid of
	gnome_program_locate_file()

2008-10-11  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add CAPPLET_CFLAGS to INCLUDES to make
	it build.

2008-10-11  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf-property-editor.c: (peditor_image_set_filename):
	Fix GCC warnings from -Wformat-security.

2008-09-29  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (read_icon_theme): use translated names for
	icon themes if available (bug #554272)

==================== 2.24.0.1 ====================

2008-09-02  Jens Granseuer  <jensgr@gmx.net>

	* file-transfer-dialog.c: (file_transfer_job_schedule): properly
	initialize the callback data (bug #550263)

2008-08-16  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-info.c: (gtk_theme_info_missing_engine): don't leak
	the theme engine path

2008-08-16  Jens Granseuer  <jensgr@gmx.net>

	Keep track of hidden themes, too, so that e.g. we don't erroneously
	show "GTK theme missing" when a metatheme references a hidden GTK
	theme (part of bug #547301)

	* gnome-theme-info.c: (gnome_theme_read_meta_theme),