@@ -1,3 +1,7 @@
+2008-10-26  Jens Granseuer  <jensgr@gmx.net>
+
+	* capplet-util.c: (capplet_help): fix error handling
+
 Fri Oct 24 19:18:37 2008  Søren Sandmann  <sandmann@redhat.com>
 
 	* capplet-util.c: Include <stdlib.h>
